--- a/charts/java-connector/templates/service.yaml
+++ b/charts/java-connector/templates/service.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ include "fullname" . }}-service
+  name: {{ include "fullname" . }}
   labels:
     chart: "{{ .Chart.Name }}-{{ .Chart.Version | replace "+" "_" }}"
 spec:
