[java-connector] Simplified fullname and fixed ifs in deployment.yaml

--- a/charts/java-connector/templates/deployment.yaml
+++ b/charts/java-connector/templates/deployment.yaml
@@ -14,12 +14,8 @@ spec:
       labels:
         app: {{ include "fullname" . }}
     spec:
-      {{- if .Values.serviceAccount  -}}
-      serviceAccount: {{ .Values.serviceAccount }}
-      {{- end -}}
-      {{- if .Values.serviceAccountName  -}}
-      serviceAccountName: {{ .Values.serviceAccountName }}
-      {{- end -}}
+      {{ if .Values.serviceAccount }}serviceAccount: {{ .Values.serviceAccount }}{{ end }}
+      {{ if .Values.serviceAccountName }}serviceAccountName: {{ .Values.serviceAccountName }}{{ end }}
       containers:
       - name: {{ .Chart.Name }}
         image: "{{ .Values.image }}"
