--- a/charts/java-connector/templates/deployment.yaml
+++ b/charts/java-connector/templates/deployment.yaml
@@ -20,8 +20,10 @@ spec:
       - name: {{ .Chart.Name }}
         image: "{{ .Values.image }}"
         imagePullPolicy: IfNotPresent
+        {{ if .Values.env }}
         env:
 {{ toYaml .Values.env | indent 10 }}
+        {{ end }}
         ports:
         - containerPort: {{ .Values.service.internalPort | int }}
         livenessProbe:
