--- a/charts/java-connector/templates/service.yaml
+++ b/charts/java-connector/templates/service.yaml
@@ -9,7 +9,7 @@ spec:
   ports:
   - port: {{ .Values.service.externalPort }}
     targetPort: {{ .Values.service.internalPort }}
-    protocol: TCP
+    protocol: {{ default "TCP" .Values.service.protocol }}
     name: {{ .Values.service.name }}
   selector:
     app: {{ include "fullname" . }}
